--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,59 @@ html,body {
     padding: 0;
 }
 
+@font-face {
+    font-family: "SomepxNew";
+    src: url("../assets/fonts/SomepxNew.woff") format('woff');
+}
+
 body {
     background-color: #deeed6;
     color: #442434;
+    font-family: "SomepxNew";
+    font-size: 1.5em;
+}
+
+.textbox {
+    border: 2px solid #d04648;
+    background-color: #dad45e;
+    border-radius: 3px;
+    margin: 0 auto;
+    width: 180px;
+    font-family: "SomepxNew";
+    font-size: 1em;
+    padding: 0px 0px 7px 9px;
+}
+
+.textbox td{
+    text-align: left;
+    padding: 0;
+    line-height: 0.7;
+}
+
+.textbox .bar{
+    display: block;
+    height: 12px;
+    margin-top: 3px;
+}
+
+.textbox .health {
+    background-color: #6daa2c;
+
+}
+
+.textbox .attack {
+    background-color: #d04648;
+}
+
+.textbox .speed {
+    background-color: #d27d2c;
+}
+
+.textbox .jump {
+    background-color: #6dc2ca;
+}
+
+.avatar {
+float: left;
+padding-top: 5px;
 }
