--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,16 @@ html, body {
     padding: 0;
 }
 
+img {
+    image-rendering: optimizeSpeed;             /* STOP SMOOTHING, GIVE ME SPEED  */
+    image-rendering: -moz-crisp-edges;          /* Firefox                        */
+    image-rendering: -o-crisp-edges;            /* Opera                          */
+    image-rendering: -webkit-optimize-contrast; /* Chrome (and eventually Safari) */
+    image-rendering: pixelated;                 /* Chrome */
+    image-rendering: optimize-contrast;         /* CSS3 Proposed                  */
+    -ms-interpolation-mode: nearest-neighbor;   /* IE8+                           */
+}
+
 @font-face {
     font-family: "SomepxNew";
     src: url("../assets/fonts/SomepxNew.woff") format('woff');
