--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,19 @@ body {
     font-size: 1.5em;
 }
 
+h1 {
+    text-shadow: 1px 1px #8595a1;
+    transform:scale(1.5,1);
+    -webkit-transform:scale(1.5,1);
+    margin-bottom: 6px;
+    margin-top: 0px;
+}
+
+h3 {
+    margin-top: 0px;
+    margin-bottom : 5px;
+}
+
 .character {
     border: 2px solid #d04648;
     background-color: #dad45e;
@@ -103,11 +116,15 @@ body {
     border-radius: 5px;
     display: block;
     height: 32px;
-    width: 150px;
+    width: 200px;
     margin: 15px auto;
 }
 
 .button:hover {
     background-color:  #442434;
     text-shadow: 0px 0px #8595a1;
+}
+
+.button img {
+    float: left;
 }
