--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,8 @@ html, body {
     box-sizing: border-box;
 }
 
-img {
+
+img, canvas {
     image-rendering: optimizeSpeed;             /* STOP SMOOTHING, GIVE ME SPEED  */
     image-rendering: -moz-crisp-edges;          /* Firefox                        */
     image-rendering: -o-crisp-edges;            /* Opera                          */
