--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,39 @@ td {
 
 }
 
+.hud .points{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 170px;
+    height: 50px;
+}
+
+.hud .points .life {
+    width: 100px;
+    height: 18px;
+    float: left;
+}
+
+.hud .points .life .bar{
+    margin-left: 10px;
+
+}
+
+.hud .points .xp {
+    line-height: 12px;
+    width: 60px;
+    float: left;
+    text-align: right;
+}
+
+#hud_button{
+    position: absolute;
+    top: 2px;
+    right: 2px;
+    margin: 0;
+}
+
 .stretch {
     min-height:100%;
     width:auto;
@@ -307,6 +340,10 @@ td {
     border-radius: 45px;
     background-color: #deeed6;
     z-index: 6;
+}
+
+#fight_screen {
+    background-color: #deeed6;
 }
 
 .fight h2 {
@@ -456,7 +493,7 @@ td {
     position: absolute;
     width: 440px;
     left:20px;
-    top: 10px;
+    top: 56px;
     height: 80px;
     background-color: #30346d;
     color: #deeed6;
